Use URI.toURL()
- URL constructors are deprecated in Java 20+